--- a/BinarCarRental/Home/ViewController/HomeViewController.xib
+++ b/BinarCarRental/Home/ViewController/HomeViewController.xib
@@ -5,12 +5,12 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="BinarCarRental" customModuleProvider="target">
             <connections>
+                <outlet property="homeTableView" destination="3za-Om-4TA" id="P4d-gQ-YSp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,25 +19,61 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good Luck :)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="so4-JU-eI9">
-                    <rect key="frame" x="158.5" y="437.5" width="97.5" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jkn-tq-QEh">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="176"/>
+                    <color key="backgroundColor" red="0.82745098039999998" green="0.85098039219999999" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="176" id="dVI-JU-ZDL"/>
+                    </constraints>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KMM-Po-rd9">
+                    <rect key="frame" x="16" y="56" width="93.5" height="38.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi, Nama" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2r-CJ-fvB">
+                            <rect key="frame" x="0.0" y="0.0" width="50.5" height="14"/>
+                            <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pp0-tp-SWX">
+                            <rect key="frame" x="0.0" y="22" width="93.5" height="16.5"/>
+                            <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="91E-yK-EEH">
+                    <rect key="frame" x="370" y="67" width="28" height="28"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="28" id="BiE-EX-Y86"/>
+                        <constraint firstAttribute="width" constant="28" id="JIo-Ik-YHI"/>
+                    </constraints>
+                </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3za-Om-4TA">
+                    <rect key="frame" x="0.0" y="102.5" width="414" height="793.5"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="so4-JU-eI9" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="D8l-cI-hLl"/>
-                <constraint firstItem="so4-JU-eI9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Rrq-Sh-lm3"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Jkn-tq-QEh" secondAttribute="trailing" id="0ry-N2-8ek"/>
+                <constraint firstItem="3za-Om-4TA" firstAttribute="top" secondItem="KMM-Po-rd9" secondAttribute="bottom" constant="8" id="7qL-hi-Tf7"/>
+                <constraint firstItem="3za-Om-4TA" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Eej-3b-E0c"/>
+                <constraint firstItem="Jkn-tq-QEh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="EhD-BF-sCO"/>
+                <constraint firstItem="91E-yK-EEH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="67" id="Fgv-eR-Pb4"/>
+                <constraint firstAttribute="bottom" secondItem="3za-Om-4TA" secondAttribute="bottom" id="SGN-1x-d6H"/>
+                <constraint firstItem="Jkn-tq-QEh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="oeM-Wp-Pxf"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="91E-yK-EEH" secondAttribute="trailing" constant="16" id="pv9-kq-ex2"/>
+                <constraint firstItem="KMM-Po-rd9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="unv-7v-XkA"/>
+                <constraint firstItem="KMM-Po-rd9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="56" id="vPp-8V-9pA"/>
+                <constraint firstItem="3za-Om-4TA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="wD7-WP-GYM"/>
             </constraints>
-            <point key="canvasLocation" x="133" y="126"/>
+            <point key="canvasLocation" x="131.8840579710145" y="125.89285714285714"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="profile" width="28" height="28"/>
     </resources>
 </document>
