--- a/BinarCarRental/Detail/ViewController/BannerTableViewCell.xib
+++ b/BinarCarRental/Detail/ViewController/BannerTableViewCell.xib
@@ -58,6 +58,9 @@ di kawasanmu</string>
                                         <integer key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="addTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="cAH-xQ-yjS"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.035294117647058823" green="0.10588235294117647" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -88,6 +91,9 @@ di kawasanmu</string>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="addButton" destination="5l3-y0-uTQ" id="ceZ-Be-h2O"/>
+            </connections>
             <point key="canvasLocation" x="155.07246376811597" y="112.5"/>
         </tableViewCell>
     </objects>
